--- a/package.json
+++ b/package.json
@@ -1,39 +1,24 @@
 {
-  "name": "solid-annotations",
+  "name": "linkeddatanotificationwatcher",
   "version": "0.0.1",
-  "description": "Decentralized annotation plugin",
-  "main": "./src/annotations.js",
+  "description": "Linked Data Notification Watcher",
+  "main": "./src/inboxwatcher.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-webpack": "webpack --progress --colors",
-    "build": "browserify ./src/annotations.js --standalone annotations > ./out/bundle.js"
   },
   "keywords": [
     "decentralized",
     "annotations",
-    "solid",
-    "browser"
+    "linked data notifications"
   ],
   "author": "Lukas Vanhoucke",
   "license": "MIT",
   "dependencies": {
-    "medium-editor": "^5.23.2",
-    "rangy": "^1.3.0",
     "rdflib": "^0.16.5",
     "solid-client": "^0.24.3",
-    "solid-notifications": "github:solid/solid-notifications",
-    "uuid": "^3.1.0"
-  },
-  "devDependencies": {
-    "browser-process-hrtime": "^0.1.2",
-    "promise-retry": "^1.1.1",
-    "random-user": "^2.0.2",
-    "request": "^2.83.0",
-    "superagent": "^3.8.2",
-    "webpack": "^3.10.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Lukkie/SolidAnnotations"
+    "url": "https://github.com/Lukkie/LinkedDataNotificationWatcher"
   }
 }
