--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Linked Data Notification Watcher",
   "main": "./src/inboxwatcher.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "decentralized",
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "rdflib": "^0.16.5",
-    "solid-client": "^0.24.3",
+    "solid-client": "^0.24.3"
   },
   "repository": {
     "type": "git",
