--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Lukkie/LinkedDataNotificationWatcher"
+  },
+  "devDependencies": {
+    "hound": "^1.0.5"
   }
 }
